# hjz

./: README.md
src/freshness_real_robot_validation/: README.md  package.xml  setup.cfg  setup.py
src/freshness_real_robot_validation/config/: real_comm_scenarios.yaml  real_system_phase_source.yaml
src/freshness_real_robot_validation/freshness_real_robot_validation/: __init__.py  cmd_channel_wrapper.py  cmd_channel_wrapper_logic.py  communication_execution_proxy.py  config_loader.py  frame_id_codec.py  json_topics.py  observe_only_traffic.py  observe_only_traffic_source.py  phase_contract.py  phase_source_bridge.py  phase_source_runtime.py  policy_logic.py  shadow_policy_sidecar.py  task_aware_shadow_observer.py  tx_policy_sidecar.py  wrapper_metadata.py
src/freshness_real_robot_validation/launch/: controlled_motion_validation.launch.py  mission_aware_shadow_validation.launch.py  safe_idle_validation.launch.py
src/freshness_real_robot_validation/resource/: freshness_real_robot_validation
src/freshness_real_robot_validation/test/: test_cmd_channel_wrapper_logic.py  test_communication_execution_proxy.py  test_launch_static.py  test_observe_only_traffic.py  test_phase_contract.py  test_phase_source_runtime.py  test_policy_logic.py  test_wrapper_metadata.py
src/motor_httx_pos_spe/: CMakeLists.txt  TIAOZI_USAGE.md  package.xml
src/motor_httx_pos_spe/config/: tiaozi_tcp_model_fixed_cars.yaml  tiaozi_tcp_model_fixed_cars_fallbacks.yaml
src/motor_httx_pos_spe/src/: tiaozi_tcp_model_fixed_cars.cpp
src/wing_alignment_sensing/: CMakeLists.txt  package.xml
src/wing_alignment_sensing/src/: force_monitor.cpp  qr_delta_publisher.cpp
src/wing_alignment_system/: REAL_MACHINE_MEASUREMENT_CONTRACT.md  package.xml  setup.cfg  setup.py
src/wing_alignment_system/config/: mission_params.yaml
src/wing_alignment_system/launch/: fr_tac_p3_single_robot_runtime.launch.py  fr_tac_p3d_d1c_r2_bringup.launch.py  fr_tac_p3d_d1c_r6_natural_goal_shadow.launch.py  fr_tac_p3d_degraded_controlled.launch.py  fr_tac_p3d_three_robot_shadow.launch.py  hardware_preliminary_safe_idle.launch.py  mission_bringup.launch.py  run_all.launch.py  system_bringup.launch.py
src/wing_alignment_system/scripts/: analyze_effective_freshness.py  cleanup_stage0_processes.py  create_bench_run_manifest.py  create_bench_run_manifest.py.stage0_backup_20260507_090934  derive_hardware_preliminary_artifacts.py  e5_low_speed_command_response_calibration.py  hardware_clock_sync_monitor.sh  hardware_network_monitor.sh  monitor_stage0_topic_safety.py  publish_isolated_cmd_replay.py  recompute_d1c_r4_gate.py  replay_communication_policy_offline.py  run_fr_tac_p2_shadow_validation.sh  run_fr_tac_p3_mission_safe_idle.sh  run_fr_tac_p3_nonzero_shadow_check.py  run_fr_tac_p3_single_robot_controlled.py  run_fr_tac_p3_single_robot_controlled.sh  run_fr_tac_p3_single_robot_preflight.sh  run_fr_tac_p3_single_robot_runtime.sh  run_fr_tac_p3_single_robot_shadow.py  run_fr_tac_p3_single_robot_shadow.sh  run_fr_tac_p3d_d121_tracer1_real_short.sh  run_fr_tac_p3d_d12_preflight.sh  run_fr_tac_p3d_d1c_goal_trigger_readiness.sh  run_fr_tac_p3d_d1c_natural_readiness.sh  run_fr_tac_p3d_d1c_r6_natural_mission_goal_activation.sh  run_fr_tac_p3d_degraded_controlled.sh  run_fr_tac_p3d_degraded_controlled.sh.bak.final  run_fr_tac_p3d_degraded_controlled.sh.bak.final2  run_fr_tac_p3d_degraded_controlled.sh.bak.synth2  run_fr_tac_p3d_degraded_controlled.sh.bak.synthfix  run_fr_tac_p3d_degraded_controlled.sh.bak_pubcount_parse_fix  run_fr_tac_p3d_degraded_controlled.sh.bak_single_robot_fix  run_fr_tac_p3d_degraded_controlled.sh.bak_synth_exact_fix  run_fr_tac_p3d_degraded_controlled.sh.bak_synth_exact_fix2  run_fr_tac_p3d_degraded_controlled.sh.bak_synth_nonzero_sec  run_fr_tac_p3d_degraded_controlled.sh.bak_synthetic_robot_filter  run_fr_tac_p3d_degraded_controlled.sh.bak_v4  run_fr_tac_p3d_degraded_controlled.sh.bk3  run_fr_tac_p3d_existing_launch_observer.sh  (+16 more)
src/wing_alignment_system/tests/: test_cmd_watchdog_control_logging.py  test_cmd_watchdog_execution_modes.py  test_common_rt_overrun.py  test_cooperative_approach.py  test_final_entry_mode.py  test_final_precision_all_robots.py  test_force_monitor_invalid_raw_policy.py  test_fr_tac_p3_runtime_static.py  test_goto_pose_driver_heading_gate.py  test_hardware_preliminary_derivation.py  test_hardware_preliminary_manifest_params.py  test_hardware_preliminary_safe_idle_launch_static.py  test_hardware_preliminary_validation.py  test_managed_phase_artifacts.py  test_managed_phase_control.py  test_mission_dispatcher_final_goal_bias.py  test_mission_phase_client.py  test_mocap_csv_recorder.py  test_motion_avoidance.py  test_multi_tracer_keyboard_control.py  test_multi_tracer_return_home.py  test_passive_measurement_recorder_static.py  test_real_machine_preflight.py  test_resume_phase_control.py  test_safe_idle_shutdown_hardening.py  test_slide_recenter_defaults.py  test_summarize_run_kpi.py  test_terminal_rack_collision_exception.py  test_wait_qr_auto_micro_search.py
src/wing_alignment_system/wing_alignment_system/: baseline_guard.py  cmd_scheduler_node.py  cmd_scheduler_policy.py  cmd_scheduler_types.py  cmd_watchdog_node.py  cmd_watchdog_policy.py  cmd_watchdog_types.py  common_async_csv.py  common_rt.py  common_utils.py  communication_profile.py  drive_coarse_controller.py  drive_math.py  drive_precision_controller.py  drive_rate_limiter.py  drive_terminal_controller.py  drive_types.py  goto_pose_driver.py  launch_builders.py  mission_coordinator.py  mission_dispatcher.py  mission_gate_manager.py  mission_geometry.py  mission_phase_client.py  mission_robot_step.py  mission_slide_manager.py  mission_state_helpers.py  mission_types.py  mocap_csv_recorder.py  multi_tracer_keyboard_control.py  multi_tracer_return_home.py  p3c_emergency_stop_publisher.py  p3d_mission_aware_shadow_bridge.py  p3d_replay_phase_source.py  p3d_shadow_cmd_bridge.py  passive_measurement_recorder.py  real_machine_preflight.py  slide_speed_sine_test.py  slide_speed_sine_test_multi.py  target_estimator.py
(+35 files in other folders)
