<?xml version="1.0"?>
<package format="3">
  <name>wing_alignment_sensing</name>
  <version>0.0.1</version>
  <description>Lightweight sensing bridge: publish dx/dy/dz and emergency stop.</description>

  <maintainer email="ls@todo.todo">ls</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
